# carramba-libs

./: .gitignore  Makefile.am  Makefile.in  README.md  bootstrap  carramba-0.1.pc  carramba-1.pc  carramba-libs.h  carramba-libs.pc.in  carramba.pc.in  config.h.in  config.h.in~  configure  configure.ac  iban.c  main.c
doc/: Makefile.am  Makefile.in  carramba-libs.info  carramba-libs.texi  stamp-vti  version.texi
examples/: README.md  example01.c
info/: Makefile.am  Makefile.in  carramba-libs-1.info  carramba-libs-1.texi  carramba-libs.info-1.0.texi  version.texi
src/: iban.c  nip.c  pesel.c  regon.c
