prefix=@prefix@
PACKAGE = @PACKAGE@
VERSION = @VERSION@
PACKAGE_VERSION_MAJOR = @PACKAGE_VERSION_MAJOR@
PACKAGE_VERSION_MINOR = @PACKAGE_VERSION_MINOR@
PACKAGE_VERSION_MICRO = @PACKAGE_VERSION_MICRO@
exec_prefix=${prefix}
bindir=@bindir@
libdir=@libdir@
includedir=@includedir@
datadir=@datadir@
mandir=@mandir@
infodir=@infodir@
pkgconfigdir = @pkgconfigdir@
docdir=${datadir}/doc/${PACKAGE}
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = carramba-libs-1.texi fdl-1.3.texi gpl-3.0.texi version.texi

info_TEXINFOS = carramba-libs-1.texi
carramba_libs_1_TEXINFOS = fdl-1.3.texi gpl-3.0.texi version.texi
